Fix overflow on x axis

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  overflow-x: hidden; 
 }
 
 .header {
@@ -24,7 +25,7 @@
 
 .navbar {
   display: flex;
-  margin: 0 120px;
+  margin: 0 30vh;
   align-items: center;
 }
 
@@ -51,23 +52,19 @@
 .welcome-content {
   display: flex;
   align-items: center;
-  margin: 0 120px;
+  margin: 0 30vh;
   padding: 62px 0;
-  gap: 50px;
+  gap: 35vh;
 }
 
 .left-side {
-  max-width: 600px;
-  flex-grow: 1;
-}
-
-.right-side {
-  margin-left: auto;
+  width: 400px;
+  flex: 1;
 }
 
 .right-side img {
   width: 400px;
-  height: 200px;
+  height: auto;
 }
 
 .left-side h1 {
